# pacbrow

./: Cargo.toml  Makefile.toml  README.md  config.toml  configcomment.toml  defaultconfigcomment.toml
src/: app.rs  config.rs  display_texts.rs  main.rs  paclist.rs  ui.rs
