[package]
name = "pacbrow"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]
readme = "README.md"
repository = "https://github.com/maxgmr/pacbrow"
license-file = "LICENSE"

[dependencies]
clap = { version = ">=4.5.4", features = ["cargo"] }
ratatui = ">=0.26.3"
crossterm = ">=0.25"
regex = ">=1.10.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
