[package]
name = "pacbrow"
version = "0.2.3"
edition = "2021"
authors = ["Max Gilmour"]
readme = "README.md"
repository = "https://github.com/maxgmr/pacbrow"
license-file = "LICENSE"

[dependencies]
clap = { version = "4", features = ["cargo"] }
serde = { version = "1", features = ["derive"] }
toml = "0"
home = "0"
ratatui = { version = "0", features = ["serde"] }
crossterm = "0"
regex = "1"
cli-clipboard = "0"

[dev-dependencies]
pretty_assertions = "1"
